--- a/scss/_cronograma.scss
+++ b/scss/_cronograma.scss
@@ -38,7 +38,7 @@
 
 @media screen and (min-width: 980px) {
 
-    body{
+    .coronograma__body{
         background: linear-gradient(to right, #ffffff 30%, $color-transparente), url(../assets/img/tres-riccios.jpg);
         background-size: contain;
         background-repeat: repeat;
