--- a/scss/_orquesta.scss
+++ b/scss/_orquesta.scss
@@ -7,7 +7,7 @@
         p {
             @include portada-p($font-size:1.2rem);
             padding: 10px;
-            background-color: $color-intermedio;
+            background-color: #faefe67f;
             border-radius: 10px;
         }
     }
