--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,3 @@
-
-
-
 /* contenido */
 
 
@@ -11,7 +8,7 @@
 
     /*Solo el INDEX */
     p {
-       @include portada-p;
+        @include portada-p;
     }
 }
 
@@ -43,12 +40,19 @@
             }
 
             a.focus {
-                    color: $color-focus;
-            }   
-        }
+                text-decoration: none;
+                color: $color-focus;
+                transition: text-shadow 1s;
+            }
 
-        div.descripcion-img {
-            margin: 20px;
+            a.focus:hover {
+                text-shadow: 1px 1px 20px $color-focus;
+            }
+
+
+            div.descripcion-img {
+                margin: 20px;
+            }
         }
     }
 }
@@ -77,7 +81,11 @@
             text-decoration: none;
             color: $color-blanco;
             font-size: 3em;
+            
         }
+    }
+    div:hover {
+        @include anim-temblor($animation-iteration-count: 3,);
     }
 }
 
@@ -138,14 +146,14 @@
             font-size: 2em;
         }
 
-        div{
+        div {
             @include flex ($justify-content: space-evenly);
 
             div.descripcion-texto {
                 width: 50%;
                 min-width: 600px;
 
-                    p {
+                p {
                     margin-top: 2em;
                     margin-left: 1em;
                     margin-right: 1em;
@@ -156,10 +164,11 @@
             div.descripcion-img {
                 width: 500px;
                 margin: 20px;
+
                 img {
                     width: 100%;
                 }
             }
         }
-    } 
+    }
 }
